[package]
name = "prometheus-editor"
version = "0.1.0"
edition = "2021"
description = "Visual model editor for Prometheus Engine — skeleton, sculpt, animation"
authors = ["Eugene Lyssovsky", "Lara (AI)"]

[dependencies]
# Engine (path dependency — uses same wgpu 24)
prometheus-engine = { path = "../prometheus-engine" }

# GPU
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Math
glam = "0.29"

# GUI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Util
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
